Resolved Overflow

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,7 @@
 @import "tailwindcss";
+
+@media (max-width : 500px) {
+    body {
+        overflow-y: hidden;
+    }
+}
